# pixelstream

./: .gitignore  AGENTS.md  CMakeLists.txt  Readme.md  build_project.bat  build_project.sh  run.sh  vcpkg.json
signaling/: server.py
src/: main.cpp
src/Media/: VideoPipeline.cpp  VideoPipeline.hpp
src/Network/: SignalingClient.cpp  SignalingClient.hpp  WebRTCManager.cpp  WebRTCManager.hpp
src/SimEngine/: PhysicsEngine.cpp  PhysicsEngine.hpp
web/: index.html
